added light dark mode and fixed some variables (#37)
* add light dark mode

* changed rest of variables to blue or purple.

* changed colors to be fields in class, changed color to be purple when not checked.

* added setSwitchColor method

* created UIHelpers class

* deleted broke

* changed uiHelpers to UIHelpers

--- a/app/src/main/res/layout/fragment_third2.xml
+++ b/app/src/main/res/layout/fragment_third2.xml
@@ -10,14 +10,15 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
 
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="45dp"
         android:text="Auto cont."
-        android:textSize="30sp"
+        android:textSize="35sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pop"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -33,26 +34,46 @@
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="38dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="61dp"
+        android:layout_marginEnd="61dp"
+        android:layout_marginBottom="4dp"
+        android:gravity="center"
         android:text="Any other comments? (max 150 characters)"
+        android:textSize="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/comments"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/pop" />
 
     <EditText
-        android:id="@+id/editTextTextMultiLine"
+        android:id="@+id/comments"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="43dp"
+        android:layout_marginStart="101dp"
+        android:layout_marginBottom="362dp"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
         android:maxLength="150"
-        app:layout_constraintStart_toStartOf="@+id/textView9"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
+    <ImageView
+        android:id="@+id/pop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="74dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView9"
+        app:layout_constraintEnd_toStartOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/pop" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
