--- a/app/src/main/res/layout/fragment_third2.xml
+++ b/app/src/main/res/layout/fragment_third2.xml
@@ -10,13 +10,16 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="0dp"
+        android:layout_width="185dp"
         android:layout_height="0dp"
 
+        android:layout_marginStart="39dp"
         android:layout_marginTop="40dp"
-        android:layout_marginEnd="45dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="563dp"
         android:text="Auto cont."
         android:textSize="35sp"
+        app:layout_constraintBottom_toTopOf="@+id/toTeleop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/pop"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,41 +28,10 @@
         android:id="@+id/toTeleop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="33dp"
         android:text="Teleop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        tools:layout_editor_absoluteX="296dp"
+        tools:layout_editor_absoluteY="650dp" />
 
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="61dp"
-        android:layout_marginEnd="61dp"
-        android:layout_marginBottom="4dp"
-        android:gravity="center"
-        android:text="Any other comments? (max 150 characters)"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/comments"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pop" />
-
-    <EditText
-        android:id="@+id/comments"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="101dp"
-        android:layout_marginBottom="362dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:maxLength="150"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <ImageView
         android:id="@+id/pop"
@@ -67,9 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="13dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="39dp"
-        android:layout_marginBottom="74dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView9"
+        android:layout_marginBottom="591dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
