--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -24,11 +24,9 @@
 
     <EditText
         android:id="@+id/numNotes"
-        android:layout_width="149dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="-75dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="216dp"
+        android:layout_width="75dp"
+        android:layout_height="57dp"
+        android:layout_marginEnd="300dp"
         android:layout_marginBottom="27dp"
         android:ems="10"
         android:inputType="number"
@@ -123,11 +121,11 @@
 
     <EditText
         android:id="@+id/numNotesInAmp"
-        android:layout_width="129dp"
+        android:layout_width="75dp"
         android:layout_height="57dp"
-        android:layout_marginStart="-335dp"
+        android:layout_marginStart="-150dp"
         android:layout_marginTop="120dp"
-        android:layout_marginEnd="85dp"
+        android:layout_marginEnd="273dp"
         android:layout_marginBottom="10dp"
         android:ems="10"
         android:inputType="number"
@@ -142,14 +140,14 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="-150dp"
+        android:layout_marginStart="-220dp"
         android:layout_marginTop="100dp"
-        android:layout_marginEnd="176dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="22dp"
         android:text="Any robot contact?"
         app:layout_constraintBottom_toTopOf="@+id/spinner"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/numNotesInAmp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <Spinner
