--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginEnd="239dp"
+        android:layout_marginEnd="220dp"
         android:layout_marginBottom="16dp"
         android:text="If so how many times?"
         app:layout_constraintBottom_toTopOf="@+id/numNotes"
@@ -24,9 +24,9 @@
 
     <EditText
         android:id="@+id/numNotes"
-        android:layout_width="75dp"
+        android:layout_width="120dp"
         android:layout_height="57dp"
-        android:layout_marginEnd="300dp"
+        android:layout_marginEnd="225dp"
         android:layout_marginBottom="27dp"
         android:ems="10"
         android:inputType="number"
@@ -57,38 +57,41 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="248dp"
+        android:layout_marginEnd="228dp"
         android:layout_marginBottom="17dp"
         android:text="Working Auto?"
         app:layout_constraintBottom_toTopOf="@+id/switch2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pop" />
+        app:layout_constraintTop_toBottomOf="@+id/pop"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <Switch
         android:id="@+id/switch2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="155dp"
+        android:layout_marginEnd="134dp"
         android:layout_marginBottom="20dp"
         android:text="Did robot move out of zone?"
         app:layout_constraintBottom_toTopOf="@+id/switch3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch1" />
+        app:layout_constraintTop_toBottomOf="@+id/switch1"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <Switch
         android:id="@+id/switch3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="200dp"
+        android:layout_marginEnd="180dp"
         android:layout_marginBottom="21dp"
         android:text="Did the robot score ?"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/switch2" />
+        app:layout_constraintTop_toBottomOf="@+id/switch2"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <TextView
         android:id="@+id/textView4"
@@ -110,7 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="-75dp"
         android:layout_marginTop="88dp"
-        android:layout_marginEnd="142dp"
+        android:layout_marginEnd="128dp"
         android:layout_marginBottom="2dp"
         android:text="Number of notes in Amp"
         app:layout_constraintBottom_toTopOf="@+id/numNotesInAmp"
@@ -121,11 +124,11 @@
 
     <EditText
         android:id="@+id/numNotesInAmp"
-        android:layout_width="75dp"
+        android:layout_width="120dp"
         android:layout_height="57dp"
         android:layout_marginStart="-150dp"
         android:layout_marginTop="120dp"
-        android:layout_marginEnd="273dp"
+        android:layout_marginEnd="175dp"
         android:layout_marginBottom="10dp"
         android:ems="10"
         android:inputType="number"
@@ -142,7 +145,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="-220dp"
         android:layout_marginTop="100dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="22dp"
         android:text="Any robot contact?"
         app:layout_constraintBottom_toTopOf="@+id/spinner"
@@ -156,7 +159,7 @@
         android:layout_height="28dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="33dp"
-        android:layout_marginEnd="109dp"
+        android:layout_marginEnd="95dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/toSecondFragment"
         app:layout_constraintEnd_toEndOf="parent"
