--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -95,8 +95,8 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="260dp"
-        android:layout_height="96dp"
+        android:layout_width="252dp"
+        android:layout_height="47dp"
         android:layout_marginStart="2dp"
         android:layout_marginTop="32dp"
         android:layout_marginBottom="75dp"
@@ -186,6 +186,20 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="-4dp" />
+
+    <TextView
+        android:id="@+id/team"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="103dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="106dp"
+        android:layout_marginBottom="71dp"
+        android:text=""
+        app:layout_constraintBottom_toTopOf="@+id/switch2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/pop"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
