--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -49,10 +49,19 @@
             android:id="@+id/input"
             android:layout_width="140dp"
             android:layout_height="66dp"
-            android:hint="Team Number"
+            android:hint="teamnumber"
             android:inputType="number"
             android:translationX="133dp"
             android:translationY="110dp" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/matchInput"
+            android:layout_width="140dp"
+            android:layout_height="66dp"
+            android:hint="matchnumber"
+            android:inputType="number"
+            android:translationX="133dp"
+            android:translationY="200dp" />
 
     </RelativeLayout>
 </androidx.core.widget.NestedScrollView>
