--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -49,7 +49,7 @@
             android:id="@+id/input"
             android:layout_width="140dp"
             android:layout_height="66dp"
-            android:hint="teamnumber"
+            android:hint="Team Number"
             android:inputType="number"
             android:translationX="133dp"
             android:translationY="110dp" />
@@ -58,7 +58,7 @@
             android:id="@+id/matchInput"
             android:layout_width="140dp"
             android:layout_height="66dp"
-            android:hint="matchnumber"
+            android:hint="Match Number"
             android:inputType="number"
             android:translationX="133dp"
             android:translationY="200dp" />
