--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -21,23 +21,170 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/Team_Selection"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="Team Selection"
-                android:textColor="@color/white"
-                android:textSize="32sp" />
-
-            <TextView
                 android:id="@+id/Auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="Auto"
                 android:textColor="@color/white"
-                android:textSize="32sp"
+                android:textSize="35sp"
                 tools:ignore="HardcodedText" />
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/Working_auto"
+                    android:layout_width="112dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="Working Auto"
+                    android:textColor="@color/white"
+                    android:textSize="30sp"
+                    tools:ignore="HardcodedText,RtlHardcoded" />
+
+                <TextView
+                    android:id="@+id/Working_auto_info"
+                    android:layout_width="230dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:padding="40dp"
+                    android:text="This means that if the robot moved in the auto section, even just a centimeter."
+                    android:textColor="@color/white"
+                    android:textSize="16sp"/>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/move_out_of_the_zone"
+                    android:layout_width="33dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="0dp"
+                    android:text="Does the robot move out of the zone? "
+                    android:textColor="@color/white"
+                    android:textSize="28sp"
+                    tools:ignore="HardcodedText,RtlHardcoded" />
+
+                <TextView
+                    android:id="@+id/move_out_of_the_zone_info"
+                    android:layout_width="230dp"
+                    android:layout_height="match_parent"
+                    android:gravity="left"
+                    android:padding="40dp"
+                    android:text="This means did it move past the red lines on the field."
+                    android:textColor="@color/white"
+                    android:textSize="16sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/Did_the_robot_score"
+                    android:layout_width="170dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="0dp"
+                    android:text="Did the robot score?"
+                    android:textColor="@color/white"
+                    android:textSize="30sp"
+                    tools:ignore="HardcodedText,RtlHardcoded" />
+
+                <TextView
+                    android:id="@+id/Did_the_robot_score_info"
+                    android:layout_width="230dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:padding="40dp"
+                    android:text="This means did the robot scored in the speaker which is the big structure on each side of the field."
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/If_so_how_many_times"
+                    android:layout_width="170dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="If so, how many times?"
+                    android:textColor="@color/white"
+                    android:textSize="30sp"
+                    android:padding="20dp"
+                    tools:ignore="HardcodedText,RtlHardcoded" />
+
+                <TextView
+                    android:id="@+id/If_so_how_many_times_info"
+                    android:layout_width="33dp"
+                    android:layout_height="match_parent"
+                    android:gravity="left"
+                    android:padding="40dp"
+                    android:text="In the blank below, click it and enter how many times the robot scored in the speaker."
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/Number_of_notes_scored_in_amp"
+                    android:layout_width="170dp"
+                    android:layout_height="212dp"
+                    android:gravity="center"
+                    android:padding="20dp"
+                    android:text="Number of notes scored in amp"
+                    android:textColor="@color/white"
+                    android:textSize="30sp"
+                    tools:ignore="HardcodedText,RtlHardcoded" />
+
+                <TextView
+                    android:id="@+id/Number_of_notes_scored_in_amp_info"
+                    android:layout_width="33dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="35dp"
+                    android:text="This means how many notes were scored in the place on the side of the field, where you push in a note."
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/Any_robot_contacts"
+                    android:layout_width="170dp"
+                    android:layout_height="160dp"
+                    android:gravity="center"
+                    android:padding="0dp"
+                    android:text="Any robot contacts? "
+                    android:textColor="@color/white"
+                    android:textSize="30sp"
+                    tools:ignore="HardcodedText,RtlHardcoded" />
+
+                <TextView
+                    android:id="@+id/Any_robot_contacts_info"
+                    android:layout_width="230dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="40dp"
+                    android:text="Pick from the 3 options no contact which means that the robot you were assigned didn’t touch anything, teammate to teammate means it touched a teammate, or teammate to opponent which means that the robot touched the opponent robot."
+                    android:textColor="@color/white"
+                    android:textSize="15sp" />
+            </TableRow>
+
 
             <TextView
                 android:id="@+id/Tele_op_info"
@@ -82,15 +229,16 @@
                     android:layout_width="105dp"
                     android:layout_height="87dp"
                     android:src="@drawable/switchoff" />
+
                 <TextView
                     android:id="@+id/Switch_off_Info"
                     android:layout_width="205dp"
                     android:layout_height="wrap_content"
                     android:gravity="left"
+                    android:padding="26dp"
                     android:text="When the switch is positioned to the left and lacks a purple color, the switch tells us that the statement is false. "
                     android:textColor="@color/white"
                     android:textSize="15sp"
-                    android:padding="26dp"
                     tools:ignore="HardcodedText,RtlHardcoded" />
             </TableRow>
 
@@ -389,19 +537,19 @@
                     android:textSize="15sp"
                     tools:ignore="HardcodedText,RtlHardcoded" />
             </TableRow>
+
+            <TextView
+                android:id="@+id/End_Game"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="End Game"
+                android:textColor="@color/white"
+                android:textSize="42sp"/>
+
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/End_Game"
-                    android:layout_width="79dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="End Game"
-                    android:textColor="@color/white"
-                    android:textSize="42sp" />
-
+                android:layout_height="match_parent">
 
             </TableRow>
 
